--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gatsby": "^5.14.0",
+    "cors": "^2.8.5",
     "next-seo": "^6.6.0",
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
